test/localVariableInFunctionReturnTypeError2.slq

def main(){ /// error
	n:=0;
	def foo(x:ğ”¹^n)liftedâ‡’0;
	n=3; /// error
	return foo;
}
